# cc_gen

./: README.md  experiment-1.ipynb  experiment-2.ipynb  pyproject.toml
cc_gen/: excel_writer.py  generator.py  plausibility_filters.py  root_domain.py  variation.py
experiment-1/domains/: rdf-0001.rdf.xml  rdf-0002.rdf.xml  rdf-0003.rdf.xml  rdf-0004.rdf.xml  rdf-0005.rdf.xml  rdf-0006.rdf.xml  rdf-0007.rdf.xml  rdf-0008.rdf.xml  rdf-0009.rdf.xml  rdf-0011.rdf.xml  rdf-0012.rdf.xml  rdf-0013.rdf.xml  rdf-0014.rdf.xml  rdf-0015.rdf.xml  rdf-0016.rdf.xml  rdf-0017.rdf.xml  rdf-0018.rdf.xml  rdf-0019.rdf.xml  rdf-0020.rdf.xml  rdf-0021.rdf.xml  rdf-0022.rdf.xml  rdf-0023.rdf.xml  rdf-0024.rdf.xml  rdf-0025.rdf.xml  rdf-0026.rdf.xml  rdf-0027.rdf.xml  rdf-0028.rdf.xml  rdf-0029.rdf.xml  rdf-0030.rdf.xml  rdf-0031.rdf.xml  rdf-0032.rdf.xml  rdf-0033.rdf.xml  rdf-0034.rdf.xml  rdf-0035.rdf.xml  rdf-0036.rdf.xml  rdf-0037.rdf.xml  rdf-0038.rdf.xml  rdf-0039.rdf.xml  rdf-0040.rdf.xml  rdf-0042.rdf.xml  (+7 more)
experiment-2/domains/: rdf-0001.rdf.xml  rdf-0002.rdf.xml  rdf-0004.rdf.xml  rdf-0007.rdf.xml  rdf-0008.rdf.xml  rdf-0010.rdf.xml  rdf-0011.rdf.xml  rdf-0013.rdf.xml  rdf-0015.rdf.xml  rdf-0016.rdf.xml
experiments-paper/experiment-1/: rdf-0023.rdf.xml  rdf-0025.rdf.xml  rdf-0052.rdf.xml
experiments-paper/experiment-2/: rdf-0257.rdf.xml  rdf-0260.rdf.xml  rdf-0795.rdf.xml
tests/: test_scene_generator.py  test_variation.py
